// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`data/AR_diagnostisk_art.json har antall rader 1`] = `0`;

exports[`data/AR_diagnostisk_art.json har forventede nøkler 1`] = `Object {}`;

exports[`data/AR_taxon.json har antall rader 1`] = `2`;

exports[`data/AR_taxon.json har forventede nøkler 1`] = `
Object {
  "foreldre": 2,
  "infoUrl": 2,
  "navnSciId": 2,
  "relasjon": 2,
  "taxonId": 2,
  "taxonIdParent": 2,
  "tittel": 2,
  "url": 2,
}
`;

exports[`data/MI_variasjon.json har antall rader 1`] = `2909`;

exports[`data/MI_variasjon.json har forventede nøkler 1`] = `
Object {
  "foreldre": 2909,
  "tittel": 2909,
}
`;

exports[`data/NA_MI_liste.json har antall rader 1`] = `3438`;

exports[`data/NA_MI_liste.json har forventede nøkler 1`] = `
Object {
  "foreldre": 2915,
  "infoUrl": 3438,
  "tittel": 3438,
}
`;

exports[`data/NA_definisjonsgrunnlag.json har antall rader 1`] = `20`;

exports[`data/NA_definisjonsgrunnlag.json har forventede nøkler 1`] = `
Object {
  "barn": 20,
  "foreldre": 20,
  "tittel": 20,
  "undertittel": 20,
}
`;

exports[`data/NA_hovedtype.json har antall rader 1`] = `92`;

exports[`data/NA_hovedtype.json har forventede nøkler 1`] = `
Object {
  "definisjonsgrunnlag": 92,
  "kunnskap": 92,
  "lkm": 92,
  "nin1": 92,
  "nivå": 92,
  "prosedyrekategori": 92,
}
`;

exports[`data/NA_kode.json har antall rader 1`] = `1796`;

exports[`data/NA_kode.json har forventede nøkler 1`] = `
Object {
  "tittel": 1796,
}
`;

exports[`data/NA_overstyr_hierarki.json har antall rader 1`] = `851`;

exports[`data/NA_overstyr_hierarki.json har forventede nøkler 1`] = `
Object {
  "0": 851,
}
`;

exports[`data/NA_prosedyrekategori.json har antall rader 1`] = `17`;

exports[`data/NA_prosedyrekategori.json har forventede nøkler 1`] = `
Object {
  "barn": 17,
  "foreldre": 17,
  "tittel": 17,
  "undertittel": 17,
}
`;

exports[`data/VV_verneområde_geojson.json har antall rader 1`] = `2865`;

exports[`data/VV_verneområde_geojson.json har forventede nøkler 1`] = `
Object {
  "geometry": 2865,
  "properties": 2865,
  "type": 2865,
}
`;

exports[`data/bbox.json har antall rader 1`] = `1033`;

exports[`data/bbox.json har forventede nøkler 1`] = `
Object {
  "bbox": 1033,
}
`;

exports[`data/flett_data.json har antall rader 1`] = `3963`;

exports[`data/flett_data.json har forventede nøkler 1`] = `
Object {
  "barn": 37,
  "foreldre": 3031,
  "tittel": 3963,
  "undertittel": 37,
}
`;

exports[`data/inn_ao_fylke.json har antall rader 1`] = `18`;

exports[`data/inn_ao_fylke.json har forventede nøkler 1`] = `
Object {
  "tittel": 18,
  "utenRamme": 18,
}
`;

exports[`data/inn_ao_kommune.json har antall rader 1`] = `422`;

exports[`data/inn_ao_kommune.json har forventede nøkler 1`] = `
Object {
  "tittel": 422,
}
`;

exports[`data/inn_ar_taxon.json har antall rader 1`] = `2`;

exports[`data/inn_ar_taxon.json har forventede nøkler 1`] = `
Object {
  "AcceptedName": 2,
  "Id": 2,
  "PreferredVernacularName": 2,
  "_": 0,
  "dynamicProperties": 2,
  "scientificNames": 2,
  "taxonID": 2,
  "vernacularNames": 2,
}
`;

exports[`data/inn_mi.json har antall rader 1`] = `2909`;

exports[`data/inn_mi.json har forventede nøkler 1`] = `
Object {
  "Kode": 2909,
  "Navn": 2909,
  "OverordnetKode": 2909,
}
`;

exports[`data/inn_na.json har antall rader 1`] = `1796`;

exports[`data/inn_na.json har forventede nøkler 1`] = `
Object {
  "ElementKode": 1696,
  "Kategori": 1796,
  "Kode": 1796,
  "Navn": 1796,
  "OverordnetKode": 1796,
}
`;
